# gwr_implementation

./: .gitignore  README.md  gwr_example.py  mixed_gwr_example.py  pyproject.toml
models/: gwr.py  mgwr.py  sgwr.py
