[project]
name = "gwr-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "matplotlib>=3.10.1",
    "numba>=0.61.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["mypy>=1.15.0", "ruff>=0.9.8"]


[tool.ruff]
target-version = "py312"
line-length = 119
select = ["ALL"]
ignore = ["D", "NPY002", "T201"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

plugins = ["numpy.typing.mypy_plugin"]
